# schemars

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  docs-rs-custom.css  update-examples.sh  update-tests.sh
schemars/: .gitignore  Cargo.toml  build.rs
schemars/examples/: conflicting_types.rs  conflicting_types.schema.json  custom_serialization.rs  custom_serialization.schema.json  custom_settings.rs  custom_settings.schema.json  doc_comments.schema.json  enum_repr.rs  enum_repr.schema.json  from_value.rs  from_value.schema.json  main.rs  main.schema.json  remote_derive.rs  remote_derive.schema.json  schemars_attrs.rs  schemars_attrs.schema.json  serde_attrs.rs  serde_attrs.schema.json  serialize_contract.rs  structs.rs
schemars/src/: _private.rs  consts.rs  encoding.rs  error.rs  flatten.rs  gen.rs  generate.rs  generator.rs  json_schema_impls.rs  lib.rs  macros.rs  main.rs  make_schema.rs  schema.rs  ser.rs  transform.rs  validation.rs  visit.rs
schemars/src/_private/: mod.rs  regex_syntax.rs  rustdoc.rs
schemars/src/json_schema_impls/: arbitrary_int.rs  array.rs  arrayvec.rs  arrayvec05.rs  arrayvec07.rs  atomic.rs  bigdecimal.rs  bson.rs  bytes.rs  bytes1.rs  bytesize2.rs  camino.rs  chrono.rs  chrono04.rs  compact_str.rs  core.rs  decimal.rs  deref.rs  either.rs  either1.rs  enumflags2.rs  enumset.rs  ffi.rs  ijson.rs  im.rs  im15.rs  indexmap.rs  indexmap2.rs  ipnet.rs  ipnetwork.rs  ipnetwork020.rs  jiff01.rs  jiff02.rs  mac_address.rs  maps.rs  mod.rs  netidx.rs  nonzero.rs  nonzero_signed.rs  nonzero_unsigned.rs  (+36 more)
schemars/src/validation/: macros.rs  schema.rs  span.rs
schemars/tests/: arbitrary_int.rs  arrayvec.rs  bigdecimal.rs  bound.rs  bson.rs  bytes.rs  chrono.rs  compact_str.rs  conflicting_types.rs  contract.rs  crate_alias.rs  decimal.rs  default.rs  deprecated.rs  dereference.rs  derive_crate.rs  docs.rs  either.rs  enum.rs  enum_deny_unknown_fields.rs  enum_flatten.rs  enum_repr.rs  enumflags2.rs  enumset.rs  examples.rs  extend.rs  extensions.rs  ffi.rs  flatten.rs  from_value.rs  garde.rs  indexmap.rs  indexmap2.rs  inline_subschemas.rs  ipnet.rs  ipnetwork.rs  mac_address.rs  macro.rs  metaschema.rs  multiple_enum_flatten.rs  (+42 more)
schemars/tests/actual/: README.md
schemars/tests/expected/: arbitrary_int_u1.json  arbitrary_int_u127.json  arbitrary_int_u17.json  arbitrary_int_u33.json  arbitrary_int_u65.json  arbitrary_int_u9.json  arrayvec.json  arrayvec_string.json  bigdecimal.json  bigdecimal04.json  bound.json  bytes.json  chrono-types.json  contract_deserialize.json  contract_deserialize_adjacent_tag_enum.json  contract_deserialize_tuple_struct.json  contract_deserialize_untagged_enum.json  contract_serialize.json  contract_serialize_adjacent_tag_enum.json  contract_serialize_external_tag_enum.json  contract_serialize_internal_tag_enum.json  contract_serialize_tuple_struct.json  crate_alias.json  default.json  deprecated-enum.json  deprecated-struct.json  doc_comments_enum.json  doc_comments_override.json  doc_comments_preserve_formatting.json  doc_comments_struct.json  doc_comments_struct_ref_siblings.json  doc_comments_with_inline_code.json  doc_comments_with_inline_code_normal.json  doc_comments_with_inline_table.json  duration_and_systemtime.json  either.json  enum-adjacent-tagged-duf.json  enum-adjacent-tagged-no-extras.json  enum-adjacent-tagged.json  enum-aliased.json  (+119 more)
schemars/tests/integration/: arcstr.rs  arrayvec.rs  bound.rs  bytes.rs  bytesize.rs  chrono.rs  contract.rs  crate_alias.rs  decimal.rs  default.rs  deprecated.rs  docs.rs  either.rs  enum_repr.rs  enums.rs  enums_deny_unknown_fields.rs  enums_flattened.rs  enums_flattened_option.rs  enums_option_flattened.rs  enums_ref_variants.rs  enums_untagged_variant.rs  examples.rs  extend.rs  flatten.rs  from_into.rs  from_value.rs  garde.rs  indexmap.rs  inline_subschemas.rs  jiff.rs  macros.rs  main.rs  map.rs  map_with_enum_key.rs  map_with_eum_key.rs  ordered_float.rs  regex.rs  remote_derive.rs  same_name.rs  schema_name.rs  (+16 more)
schemars/tests/integration/snapshots/schemars/tests/integration/: arrayvec.rs~arrayvec07.ser.json  bound.rs~auto_bound.de.json  bound.rs~auto_bound.ser.json  bound.rs~automatic_bound.json  bound.rs~automatic_bound_lifetimes.de.json  bound.rs~automatic_bound_lifetimes.ser.json  bound.rs~manual_bound_set.json  bound.rs~manual_bound_set.ser.json  bytes.rs~bytes.de.json  bytes.rs~bytes.ser.json  bytesize.rs~bytes.json  chrono.rs~chrono.json  contract.rs~externally_tagged_enum.de.json  contract.rs~internally_tagged_enum.de.json  contract.rs~struct_allow_unknown_fields.de.json  contract.rs~struct_allow_unknown_fields.ser.json  contract.rs~struct_deny_unknown_fields.de.json  contract.rs~struct_deny_unknown_fields.ser.json  contract.rs~tuple_struct.ser.json  contract.rs~untagged_enum.de.json  contract.rs~untagged_enum.ser.json  decimal.rs~decimal_types.de.json  decimal.rs~decimal_types.ser.json  decimal.rs~rust_decimal_serde_arbitrary_precision.de.json  decimal.rs~rust_decimal_serde_arbitrary_precision.ser.json  decimal.rs~rust_decimal_serde_float.json  either.rs~either.json  (+119 more)
schemars/tests/ui/: example_fn.rs  example_fn.stderr  invalid_attrs.rs  invalid_attrs.stderr  invalid_extend.rs  invalid_extend.stderr  invalid_rename.rs  invalid_rename.stderr  invalid_unset_attrs.rs  invalid_unset_attrs.stderr  invalid_validation_attrs.rs  invalid_validation_attrs.stderr  repr_missing.rs  repr_missing.stderr  repr_non_unit_variant.rs  repr_non_unit_variant.stderr  schema_for_arg_value.rs  schema_for_arg_value.stderr  transform_str.rs  transform_str.stderr
schemars/tests/util/: mod.rs
schemars_derive/: Cargo.toml  attributes.md  deriving.md  docs-rs-custom.css
schemars_derive/src/: bound.rs  doc_attrs.rs  idents.rs  lib.rs  metadata.rs  name.rs  preprocess.rs  regex_syntax.rs  schema_exprs.rs
schemars_derive/src/ast/: from_serde.rs  mod.rs
schemars_derive/src/attr/: custom_meta.rs  doc.rs  mod.rs  parse_meta.rs  schemars_to_serde.rs  validation.rs
schemars_derive/src/attr2/: doc.rs  mod.rs  parse_meta.rs  validation.rs
(+89 files in other folders)
